--- a/index.html
+++ b/index.html
@@ -65,6 +65,27 @@
     margin: 0px;
     color: white;
   }
+  .main {
+    height: 300px;
+  }
+  .main__title {
+    color: white;
+    font-size: 20px;
+  }
+  .input {
+    background-color: rgba(255, 255, 255, 0.1);
+    border: 2px solid white;
+    border-radius: 25px;
+    color: white;
+    font-family: 'Muli', sans-serif;
+    font-size: 16px;
+    height: 50px;
+    padding: 0px 20px;
+    width: 70%;
+  }
+  ::placeholder {
+    color: white;
+  }
 </style>
 <body>
   <header class="header">
@@ -80,6 +101,12 @@
       </ul>
     </div>
   </header>
+
+  <section class="main">
+    <h2 class="main__title">¿Qué quieres ver hoy?</h2>
+    <input class="input" type="text" placeholder="Buscar...">
+  </section>
+
 </body>
 </html>
 
